# appypie-automate-toolkit

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: API_REFERENCE.md  INTEGRATIONS.md  TEMPLATES.md  about.md  getting-started.md  index.md  integrations.md  sdk.md
examples/: basic_workflow.py  multi_step_pipeline.py  webhook_handler.py
npm/: README.md  index.d.ts  index.js  package.json
src/: __init__.py
src/connectors/: __init__.py  registry.py
src/utils/: __init__.py  auth_manager.py  helpers.py
src/workflows/: __init__.py  engine.py  templates.py
tests/: __init__.py  test_engine.py  test_helpers.py  test_registry.py  test_templates.py
